# LLM

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  browser.py  chat.py  cli.py  cli_entry.py  coding_profile.py  commands.py  config.py  consistency.py  evals.py  fileedit.py  gittools.py  history.py  hooks.py  imagegen.py  instructions.py  main.py  mcp_client.py  memory.py  modelstate.py  notes.py  personas.py  playbooks.py  project.py  promptlab.py  rag.py  repo.py  research.py  sandbox.py  scheduler.py  screen.py  skills.py  status.py  team.py  videogen.py  vision.py  voice.py
docs/: API.md  ARCHITECTURE.md  CLI.md  IMPLEMENTATION_STATUS.md  LLAMACPP.md  LOCALMODEL.md  LOCALMODEL_CREATE.md  LOCAL_CODE.md  MODEL_MANAGER.md  RUNTIME.md
evolve/: README.md  config.yaml  evaluator.py  initial_program.py
finetune/: README.md  code_to_dataset.py  config.py  export_data.py  merge_and_export.py  requirements-finetune.txt  train.py
setup/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  make_shortcut.ps1  mcp.example.json  start.ps1  start.sh  update.sh
tests/: test_api_metadata.py  test_app_init.py  test_chat_templates.py  test_cli_create.py  test_cli_parser.py  test_code_to_dataset.py  test_coding_profile.py  test_commands.py  test_consistency.py  test_fileedit.py  test_gittools.py  test_gradio_app_shell.py  test_history.py  test_hooks.py  test_instructions.py  test_llamacpp_runtime.py  test_local_code.py  test_local_code_index_edit.py  test_mail.py  test_memory.py  test_model_catalog.py  (+10 more)
(+75 files in other folders)
