[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-hub"
version = "0.1.0"
description = "Private local AI assistant and local LLM platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Local AI Hub contributors" }
]

# Runtime dependencies remain in requirements.txt so the existing setup scripts
# continue to work. Install the project itself with:
#   pip install -e .

[project.scripts]
local-ai = "app.cli_entry:main"

[tool.setuptools.packages.find]
include = ["app*", "finetune*"]
